# wedcam

./: .gitignore  Cargo.toml  README.md
html/: 404.html  camera.html  index.html  other.html  test.html
src/: lib.rs  mail.rs  main.rs  session.rs
